--- a/rbac-frontend/.env
+++ b/rbac-frontend/.env
@@ -1,2 +1,5 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_c2V0dGxlZC1yb2Jpbi05MS5jbGVyay5hY2NvdW50cy5kZXYk
-VITE_API_BASE_URL=http://localhost:3000
+ 
+
+REACT_APP_API_URL=http://localhost:5000
+REACT_APP_SUPERADMIN_EMAIL=sharmarohan2507@gmail.com
+REACT_APP_CLERK_FRONTEND_API=pk_test_aW1tdW5lLWd1bGwtODcuY2xlcmsuYWNjb3VudHMuZGV2JA
